# json-token-format

./: .gitignore  README.en.md  README.md  README.ru.md  SPEC.md  jtf_v1.py  requirements.txt  run-conformance.sh
.github/workflows/: ci.yml
conformance/: README.md  _gen_inputs.py  manifest.json  run.py  runner_js.mjs
conformance/cases/: 012-numbers-mixed-array.json  012-numbers-mixed-array.jtf  013-numbers-floats.json  013-numbers-floats.jtf  014-numbers-numeric-strings.json  014-numbers-numeric-strings.jtf  018-empty-array-value.jtf  019-empty-nested.jtf  020-nulls-in-object.json  020-nulls-in-object.jtf  021-object-flat.json  021-object-flat.jtf  022-object-reserved-keys.json  022-object-reserved-keys.jtf  023-object-nested.json  023-object-nested.jtf  024-object-deep-5-levels.json  024-object-deep-5-levels.jtf  025-tabular-flat.json  025-tabular-flat.jtf  026-tabular-flat-with-nulls.json  026-tabular-flat-with-nulls.jtf  027-tabular-key-with-space.json  027-tabular-key-with-space.jtf  028-tabular-nested-dotted.json  028-tabular-nested-dotted.jtf  029-array-primitive-ints.jtf  030-array-primitive-strings.jtf  031-array-mixed-primitives.json  031-array-mixed-primitives.jtf  032-array-of-arrays.jtf  033-array-heterogeneous.json  033-array-heterogeneous.jtf  (+23 more)
js/: README.md  package.json
python/: README.md  pyproject.toml
python/src/jtf/: __init__.py  cli.py  core.py  cost.py
python/tests/: test_roundtrip.py
tests/: api_response.json  benchmark.py  config.json  logs.json  nested_uniform.json  repeated_values.json  test_roundtrip.py  users_table.json
(+3 files in other folders)
